# iFreeChat

./: .test.c.swp  .user.cpp.swp  .user.h.swp  .window.c.swp  .window.h.swp  ChangeLog  Makefile  Makefile.am  README  aclocal.m4  config.status  configure  configure.in  dlist.h  group.c  group.cpp  group.h  gtk_common.h  ifreechat  ifreechat.c  libtool  main_window.c  makefile  test  test.c  test.py  tree_view.h  ui.glade  user.c  user.cpp  user.h  win-config.h  window.c  window.h  windows_bak.c
autom4te.cache/: output.0  requests  traces.0  traces.1
etc/: ifreechat.xml
glade/: ChatDialog.glade  GroupDialog.glade  MainWindow.glade  ui.glade
ifc/: .broadcast.c.swp  .configure.in.swp  .ifreechat.c.swp  .ifreechat.h.swp  .makefile.swp  .pchatbox.c.swp  .process_msg.c.swp  .process_msg.h.swp  .read_cfg.c.swp  .test.c.swp  .udp_socket.c.swp  .window.c.swp  .window.h.swp  Makefile  Makefile.am  Makefile.in  README  aa  aclocal.m4  broadcast.c  chatdlg.h  config.h  config.h.in~  config.status  configure  configure.in  emotion_box.c  encoding.c  gchatbox.h  group.c  group.h  ifc.sql  ifreechat  ifreechat.c  ifreechat.h  ifreechat.xml  libtool  makefile  msg.h  pchatbox.c  (+16 more)
ifc/app/: group.c  group.h  hash.c  hash.h  ifreechat  ifreechat.c  ifreechat.h  user.c  user.h
ifc/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ifc/etc/: ifreechat.xml
ifc/glade/: chatbox.glade  pchatbox.glade  ui.glade
ifc/include/: Makefile  Makefile.am  Makefile.in  category.h  config.h  encoding.h  group.h  gtk_common.h  handle_message.h  ifreechat.h  user.h
ifc/include/blowfish/: Makefile  Makefile.am
ifc/include/feiq/: Makefile  Makefile.am  Makefile.in
ifc/include/hash/: Makefile  Makefile.am
ifc/include/mem_pool/: Makefile  Makefile.am  Makefile.in  mem_pool.h
ifc/include/net/: Makefile  Makefile.am  Makefile.in  msg.h  msg_queue.h  udp_socket.h  utils.h
ifc/include/protocol/: Makefile  Makefile.am  Makefile.in
ifc/include/ui/: chatbox.h  emotion_box.h  treeview.h  window.h
ifc/lib/: Makefile  Makefile.am  Makefile.in  blowfish.h  libifreechat.la  libifreechat_la-blowfish.lo  libifreechat_la-encoding.lo  libifreechat_la-hash.lo  libifreechat_la-mem_pool.lo  libifreechat_la-queue.lo  msg_queue.h
ifc/lib/.deps/: blowfish.Po  encoding.Po  hash.Po  libifreechat_la-blowfish.Plo  libifreechat_la-mem_pool.Plo  mem_pool.Po  queue.Po
ifc/lib/.libs/: libifreechat.la  libifreechat.lai  libifreechat.so.0  libifreechat.so.0.0.0
ifc/lib/blowfish/: Makefile  Makefile.am  Makefile.in
ifc/lib/blowfish/.deps/: blowfish.Po
ifc/lib/encoding/: Makefile  Makefile.am
ifc/lib/encoding/.deps/: encoding.Po
ifc/lib/hash/: Makefile.in  murmurhash.c
ifc/lib/mem_pool/: Makefile  Makefile.in  mem_pool.c
ifc/lib/net/: Makefile  msg_queue.c  udp_socket.c
ifc/lib/net/.deps/: msg_queue.Po  packet.Po  udp_socket.Po  utils.Po
ifc/lib/protocol/: protocol.c
ifc/lib/protocol/.deps/: protocol.Po
ifc/lib/queue/: Makefile  Makefile.in
ifc/src/: Makefile  Makefile.am  Makefile.in  category.c  config.c  group.c  handle_message.c  ifreechat  ifreechat.c  ifreechat.h  makefile  user.c  user.h
ifc/src/.deps/: ifreechat-category.Po  ifreechat-config.Po  ifreechat-group.Po  ifreechat-handle_message.Po  ifreechat-ifreechat.Po  ifreechat-ifreechat.Tpo  ifreechat-user.Po
ifc/src/feiq/: Makefile  Makefile.am  Makefile.in  feiq.c  feiq.h
ifc/src/net/: Makefile  Makefile.am  Makefile.in  makefile  msg.h  msg_queue.c  packet.c
ifc/src/net/.deps/: msg_queue.Po  packet.Po  queue.Po  udp_socket.Po  utils.Po
ifc/src/protocol/: Makefile  Makefile.am  Makefile.in  protocol.c
ifc/src/protocol/.deps/: protocol.Po
ifc/src/ui/: Makefile  Makefile.in  chatbox.c  emotion_box.c  gchatbox.c  group_listview.c  listview.c  pchatbox.c  treeview.c  user_treeview.c  window.c
ifc/src/ui/.deps/: chatbox.Po  emotion_box.Po  gchatbox.Po  pchatbox.Po  user_treeview.Po  window.Po
ifc/test/: login.py  msg.py
include/: Makefile
include/encoding/: Makefile  Makefile.am  Makefile.in
include/feiq/: feiq.h
include/hash/: Makefile  hash.h  murmurhash.h
include/mem_pool/: Makefile
include/protocol/: Makefile
include/queue/: Makefile  Makefile.am  Makefile.in
include/ui/: gchatbox.c  gchatbox.h
lib/: .queue.h.swp  .test.c.swp  .udp_socket.c.swp  .udp_socket.h.swp  .utils.c.swp  .utils.h.swp  msg_queue.c  packet.c  packet.h  queue.h  socket.h  test  test.c  udp_socket.c  udp_socket.h  utils.c  utils.h
lib/.deps/: hash.Po  libifreechat_la-queue.Plo
lib/hash/: Makefile  Makefile.am  Makefile.in  hash.c
lib/net/: utils.c
lib/protocol/: protocol.c
lib/queue/: Makefile.am  queue.c
libs/: .buffer.cpp.swp  .buffer.h.swp  .network.cpp.swp  .network.h.swp  .socket.h.swp  .test.cpp.swp  .udp_socket.cpp.swp  .udp_socket.h.swp  blowfish.cpp  blowfish.h  buffer.cpp  buffer.h  makefile  network.c  network.cpp  network.h  protocol.c  protocol.cpp  protocol.h  queue.cpp  queue.h  socket.h  test  test.cpp  udp_socket.cpp  udp_socket.h  utils.cpp  utils.h
protocol/: .protocol.c.swp  makefile  protocol  protocol.c  protocol.h
script/: commit-msg
src/: .chatbox.h.swp  .chatdlg.c.swp  .chatdlg.h.swp  .gchatbox.c.swp  .gitignore  .group.c.swp  .group_listview.c.swp  .recv_msg.c.swp  .user.c.swp  .user.h.swp  .window.c.swp  Makefile  Makefile.in  broadcast.c  category.c  category.h  cflags  chatdlg.c  config.c  config.h.in  configure.in  dlist.h  emotion_box.c  emotion_box.h  gchatbox.c  global.h  group.c  group.h  group_listview.c  group_listview.h  handle_message.c  hash.c  hash.h  ifreechat  ifreechat.c  ifreechat.h  ifreechat.xml  listview.c  main_window.c  main_window.h  (+20 more)
src/.deps/: ifreechat-broadcast.Po  ifreechat-user.Po
src/autom4te.cache/: output.0
src/feiq/: :w  Makefile.am
src/glade/: chatbox.glade  gchatbox.glade  pchatbox.glade  (+1 more)
src/lib/net/: Makefile.am  Makefile.in  msg_queue.c
src/lib/net/.deps/: utils.Po
src/ui/: Makefile  Makefile.am  Makefile.in  window.c
src/ui/.deps/: listview.Po
test/: chat.glade  makefile  test  test.c  trayicon  trayicon.c
(+34 files in other folders)
