#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([ifreechat], [0.1], [http://codedelight.net])
AC_CONFIG_SRCDIR([src/ifreechat.c])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE
# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.
AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_INT64_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_CHECK_LIB([pthread], [pthread_create])
AC_FUNC_MALLOC
AC_CHECK_FUNCS([bzero ftruncate memset socket strcasecmp strchr strerror strpbrk strrchr strspn strtoul])

AC_CONFIG_FILES(Makefile
				lib/Makefile
				src/Makefile
				src/net/Makefile
				src/protocol/Makefile
				src/ui/Makefile
				)
AC_OUTPUT
