#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([ifreechat], [0.1], [http://codedelight.net])
AC_CONFIG_SRCDIR([src/ifreechat.c])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE
# Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL

# Checks for libraries.
AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/socket.h unistd.h])

# check for gtk+2.0
PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= 2.16], [
		AC_DEFINE(USE_GTK, 1, [Use GTK])
		AC_SUBST(GTK_CFLAGS)
		AC_SUBST(GTK_LIBS)
		],
		)

PKG_CHECK_MODULES(GLIB2, [
		glib-2.0 >= 2.14
		])

PKG_CHECK_MODULES(LIBGLADE, [
		libglade-2.0 >= 2.0
		])

#check for libxml2
PKG_CHECK_MODULES(LIBXML, [libxml-2.0], [
		AC_DEFINE(USE_LIBXML, 1, [Use LIBXML])
		AC_SUBST(LIBXML_CFLAGS)
		AC_SUBST(LIBXML_LIBS)
		],)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_INT64_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_CHECK_LIB([pthread], [pthread_create])
AC_FUNC_MALLOC
AC_CHECK_FUNCS([bzero ftruncate memset socket strcasecmp strchr strerror strpbrk strrchr strspn strtoul])

AC_CONFIG_FILES(Makefile
				lib/Makefile
				lib/blowfish/Makefile
				lib/hash/Makefile
				lib/mem_pool/Makefile
				lib/encoding/Makefile
				src/Makefile
				src/net/Makefile
				src/protocol/Makefile
				src/ui/Makefile
				include/Makefile
				include/blowfish/Makefile
				include/net/Makefile
				include/protocol/Makefile
				include/mem_pool/Makefile
				)
AC_OUTPUT
