noinst_LIBRARIES = libprotocol.a

AM_CPPFLAGS = $(GTK_FLAGS) $(GLIB2_CFLAGS) \
						   $(LIBGLADE_CFLAGS) -g -Wall \
						 -I ../../include \
						 -I ../../include/blowfish \
						 -I ../../include/mem_pool \
						 -I ../../include/net \
						 -I ../../include/protocol

libprotocol_a_LIBADD = 

libprotocol_a_SOURCES = protocol.c

